# drone-simulation

./: CMakeLists.txt  README.md
API3D/source/: Makefile  ex_openGL1.out  ex_openGL2.out
API3D/source/src/: ex_openGL1.cpp  ex_openGL2.cpp
API3D/source/test/: CMakeCache.txt  Dron  Makefile  cmake_install.cmake
inc/: dron.hh  graniastoslup6.hh  inter_drona.hh  inter_el_powierzchni.hh  inter_rysowania.hh  macierzobrotu.hh  plaskowyz.hh  plaskowyz_prosty.hh  powierzchnia.hh  prostopadloscian.hh  scena.hh  ukladw.hh  wektor.hh  wzgorze.hh
src/: dron.cpp  graniastoslup6.cpp  macierzobrotu.cpp  main.cpp  plaskowyz.cpp  plaskowyz_prosty.cpp  powierzchnia.cpp  prostopadloscian.cpp  scena.cpp  ukladw.cpp  wektor2D.cpp  wzgorze.cpp
