cmake_minimum_required(VERSION 3.0)
PROJECT(Dron)
include_directories(inc)
file(GLOB SOURCE "src/*.cpp" "inc/*.hh")
add_executable(${PROJECT_NAME} ${SOURCE})
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(Dron Threads::Threads)
target_link_libraries(Dron glut)
target_link_libraries(Dron GLU)
target_link_libraries(Dron GL)
target_link_libraries(Dron pthread)
target_compile_features(Dron PRIVATE cxx_std_17)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -pedantic -Werror -std=gnu++17)
